[package]
name = "axon-tools"
version = "0.0.5"
edition = "2021"
authors = ["Axon Dev <axon@axonweb3.io>"]
license = "MIT"
include = ["src/*", "README.md", "LICENSE"]
readme = "README.md"
keywords = ["axon", "tool", "no_std"]
categories = ["cryptography"]
repository = "https://github.com/axonweb3/axon-tools"
description = """
Some axon related utilities.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bit-vec]
version = "0.6"
default_features = false
optional = true

[dependencies.blst]
version = "0.3"
optional = true

[dependencies.bytes]
version = "1.4"
default-features = false

[dependencies.ethereum-types]
version = "0.14"
default-features = false
features = ["serialize"]

[dependencies.memory-db]
version = "0.32"
default-features = false
optional = true

[dependencies.rlp]
version = "0.5"
default-features = false
optional = true

[dependencies.rlp-derive]
version = "0.1"
optional = true

[dependencies.keccak-hasher]
version = "0.16"
default-features = false
optional = true

[dependencies.serde]
version = "1.0"
default_features = false
optional = true
features = ["derive"]

[dependencies.trie-db]
version = "0.27"
default-features = false
optional = true

[dev-dependencies]
cita_trie = "4.0"
ethereum = "0.14"
rand = "0.8"
overlord = "0.4"

[features]
default = []
proof = ["blst", "bit-vec", "hash", "impl-rlp"]
hash = ["keccak-hasher"]
impl-rlp = ["rlp", "rlp-derive", "ethereum-types/rlp"]
impl-serde = ["serde", "ethereum-types/serialize"]
trie = ["hash", "memory-db", "trie-db"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
