[package]
name = "axon-tools-riscv"
version = "0.1.1"
edition = "2021"
authors = ["Axon Dev <axon@axonweb3.io>"]
license = "MIT"
include = ["src/*", "README.md", "LICENSE"]
readme = "README.md"
keywords = ["axon", "tool", "no_std"]
categories = ["cryptography"]
repository = "https://github.com/axonweb3/axon-tools"
description = """
Some axon related utilities.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.bit-vec]
version = "0.6"
default_features = false
optional = true

[dependencies.blst]
package = "ckb-blst"
version = "0.100"
optional = true

[dependencies.bytes]
version = "1.4"
default-features = false
features = ["serde"]

[dependencies.ethereum-types]
version = "0.14"
default-features = false
features = ["serialize"]

[dependencies.rlp]
version = "0.5"
default-features = false
optional = true

[dependencies.rlp-derive]
version = "0.1"
optional = true

[dependencies.serde]
version = "1.0"
default_features = false
optional = true
features = ["derive"]

[dependencies.tiny-keccak]
version = "2.0"
optional = true
features = ["keccak"]

[dev-dependencies]
cita_trie = "4.0"
ethereum = "0.14"
rand = "0.8"
overlord = "0.4"

[features]
default = []
proof = ["blst", "bit-vec", "hash", "impl-rlp"]
hash = ["tiny-keccak"]
impl-rlp = ["rlp", "rlp-derive", "ethereum-types/rlp"]
impl-serde = ["serde", "ethereum-types/serialize"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
